--- a/Project/BattleCity.dproj
+++ b/Project/BattleCity.dproj
@@ -102,6 +102,7 @@
             <Form>GameInterface</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UGameMap.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
